# clean-run-python

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_HEALTH.md  Jura-Noosa-Defect-Register-sample.html  Jura-Noosa-Handover-Evidence-sample.html  LOOP_BACKLOG.md  README.md  SECURITY.md  app.py  cleanrun-iq-claude-code-onboarding.md  cleanrun_data.json  package-lock.json  package.json  preview-report-local.html  render.yaml  requirements.txt
CleanRun-IQ-FastAPI-Render/: README.md  render.yaml
CleanRun-IQ-Full-App-Render/: app.py  index.html
CleanRun-IQ-Full-App-Render1/: README.md  render.yaml  requirements.txt
CleanRun-IQ-Full-App-Render2/: README.md  app.py  index.html
CleanRun-IQ-Full-App-Render3/: .env.example  README.md  ahrefs_ce13ac9b6fefeb4e4e9407d8963d22b150613d18aa4962018e1a14a020c69fd1  app.py  index.html  manifest.webmanifest  render.yaml  requirements.txt  service-worker.js  setup.py  sitecustomize.py  supabase_client.py  supabase_storage.py
app/: __init__.py  auth.py  config.py  datetime_format.py  db.py  main.py  models.py  parse_description.py  parse_fields.py  permissions.py  reporting.py  storage.py  store.py  store_supabase.py  supabase_client.py  validation.py  workflow.py
cleanrun-iq-python-html-render-ready/: CONVERSION_AUDIT.md  RENDER_DEPLOYMENT.md  app.py  (+4 more)
cleanrun_iq_python_port/: README.md  pyproject.toml  requirements.txt
cleanrun_iq_python_port/cleanrun_iq/: __init__.py  api.py  cli.py  models.py  report_builder.py  seed.py  services.py  store.py  utils.py  voice_parser.py
cleanrun_iq_python_port/tests/: test_core.py
(+122 files in other folders)
